refator(chat): 서버 주도 방식의 채팅 번역 기능 리팩토링