@@ -29,6 +29,7 @@ import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
 public class ChatService {
@@ -260,38 +261,35 @@ public class ChatService {
      * @param roomId 채팅방 ID
      * @param userId 조회하는 사용자 ID
      * @param lastMessageId 마지막으로 조회된 메시지 ID (무한 스크롤용)
-     * @param translate 메시지 번역 요청 여부
      * @return ChatMessageResponse 목록
      */
+    // ChatService.java
+
     @Transactional(readOnly = true)
     public List<ChatMessageResponse> getMessages(
             Long roomId,
             Long userId,
-            Long lastMessageId,
-            boolean translate
+            Long lastMessageId
+
     ) {
+        ChatParticipant participant = chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_CHAT_PARTICIPANT));
+
+        boolean needsTranslation = participant.isTranslateEnabled();
+        String targetLanguage = participant.getUser().getLanguage();
+
         List<ChatMessage> messages = getRawMessages(roomId, userId, lastMessageId);
 
-        if (translate) {
-            User user = userRepository.findById(userId)
-                    .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
-
-            String targetLanguage = user.getLanguage();
-            if (targetLanguage == null || targetLanguage.isEmpty()) {
-                return messages.stream()
-                        .map(ChatMessageResponse::fromEntity)
-                        .toList();
-            }
-
+        if (needsTranslation && targetLanguage != null && !targetLanguage.isEmpty()) {
             List<String> originalContents = messages.stream()
                     .map(ChatMessage::getContent)
                     .collect(Collectors.toList());
             List<String> translatedContents = translationService.translateMessages(originalContents, targetLanguage);
 
-            return messages.stream()
-                    .map(message -> {
-                        int index = messages.indexOf(message);
-                        String translatedContent = translatedContents.get(index);
+            return IntStream.range(0, messages.size())
+                    .mapToObj(i -> {
+                        ChatMessage message = messages.get(i);
+                        String translatedContent = translatedContents.get(i);
                         return new ChatMessageResponse(
                                 message.getId(),
                                 message.getChatRoom().getId(),
@@ -300,7 +298,7 @@ public class ChatService {
                                 message.getSentAt(),
                                 message.getContent()
                         );
-                    }).toList();
+                    }).collect(Collectors.toList());
         } else {
             return messages.stream()
                     .map(message -> new ChatMessageResponse(
@@ -310,10 +308,9 @@ public class ChatService {
                             message.getContent(),
                             message.getSentAt(),
                             null
-                    )).toList();
+                    )).collect(Collectors.toList());
         }
     }
-
 
     @Transactional
     public ChatMessage saveMessage(Long roomId, Long senderId, String content) {
@@ -343,24 +340,51 @@ public class ChatService {
         return chatMessageRepository.save(message);
     }
 
+    // ChatService.java
+
     @Transactional(readOnly = true)
-    public List<ChatMessage> searchMessages(Long roomId, Long userId, String searchKeyword) {
-        ChatParticipant participant = participantRepo.findByChatRoomIdAndUserId(roomId, userId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_PARTICIPANT_NOT_FOUND));
+    public List<ChatMessageResponse> searchMessages(Long roomId, Long userId, String keyword) {
+        // 1. 사용자의 번역 설정 확인
+        ChatParticipant participant = chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_CHAT_PARTICIPANT));
 
-        Pageable pageable = PageRequest.of(0, MESSAGE_SEARCH_PAGE_SIZE, Sort.by(Sort.Direction.DESC, "sentAt"));
-        return chatMessageRepository.findByChatRoomIdAndContentContaining(
-                roomId, searchKeyword, pageable);
-    }
+        boolean needsTranslation = participant.isTranslateEnabled();
+        String targetLanguage = participant.getUser().getLanguage();
 
-    @Transactional
-    public boolean deleteMessage(Long messageId) {
-        if (!chatMessageRepository.existsById(messageId)) {
-            return false;
+        if (!needsTranslation || targetLanguage == null || targetLanguage.isEmpty()) {
+            List<ChatMessage> messages = chatMessageRepository.findByChatRoomIdAndContentContaining(roomId, keyword);
+            return messages.stream()
+                    .map(ChatMessageResponse::fromEntity)
+                    .collect(Collectors.toList());
         }
-        chatMessageRepository.deleteById(messageId);
-        return true;
+        else {
+            List<ChatMessage> allMessages = chatMessageRepository.findByChatRoomIdOrderByIdAsc(roomId);
+            if (allMessages.isEmpty()) {
+                return new ArrayList<>();
+            }
+
+            List<String> originalContents = allMessages.stream().map(ChatMessage::getContent).collect(Collectors.toList());
+            List<String> translatedContents = translationService.translateMessages(originalContents, targetLanguage);
+
+            List<MessagePair> messagePairs = IntStream.range(0, allMessages.size())
+                    .mapToObj(i -> new MessagePair(allMessages.get(i), translatedContents.get(i)))
+                    .toList();
+
+            return messagePairs.stream()
+                    .filter(pair -> pair.translatedContent().toLowerCase().contains(keyword.toLowerCase()))
+                    .map(pair -> new ChatMessageResponse(
+                            pair.originalMessage().getId(),
+                            pair.originalMessage().getChatRoom().getId(),
+                            pair.originalMessage().getSender().getId(),
+                            pair.translatedContent(),
+                            pair.originalMessage().getSentAt(),
+                            pair.originalMessage().getContent()
+                    ))
+                    .collect(Collectors.toList());
+        }
     }
+
+    private record MessagePair(ChatMessage originalMessage, String translatedContent) {}
     /**
      * @apiNote 메시지 읽음 상태를 업데이트합니다.
      * 그룹 채팅에서 '누가 읽었는지'를 관리하는 로직입니다.
@@ -644,5 +668,10 @@ public class ChatService {
 
         return ChatUserProfileResponse.from(user, imageUrl);
     }
-
+    @Transactional
+    public void toggleTranslation(Long roomId, Long userId, boolean enable) {
+        ChatParticipant participant = chatParticipantRepository.findByChatRoomIdAndUserId(roomId, userId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_CHAT_PARTICIPANT));
+        participant.toggleTranslation(enable);
+    }
 }
